commit banner section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS link -->
+    <link rel="stylesheet" href="style.css">
+    <!-- google font link -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+    </style>
+    <!-- Website title -->
     <title>project-2</title>
+
 </head>
 <body>
-       <h1>welcome to our project 2 website</h1>
+    
+    <header>
+
+        <!-- Banner section -->
+
+         <section class="banner">
+            <!-- important -->
+            <div></div>
+            <!-- important -->
+                
+            </div>
+               <div class="banner-content">
+                   <h1>All Thinks Are Possible If You believe</h1>
+                   <p>There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words</p>
+                    <button class="banner-btn">Contact Us</button>
+               </div>
+         </section>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
