commit footer section

--- a/index.html
+++ b/index.html
@@ -99,10 +99,40 @@
                    </div>
 
             </section>
+
+            <!-- mindset positon section -->
+
+            <section class="mindset-container">
+                  <div class="mindset">
+                        <h1>Awlays keep a positive mindset</h1>
+                        <button>Call Now</button>
+                  </div>
+            </section>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+         <div class="footer-container">
+            <div class="left-side">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words</p>
+                  <span>Email : <a href="">info@gmail.com</a></span>
+                  <span>Phone : <a href="">01500 00 00 00</a></span>
+  
+                  <div class="footer-icon">
+                       <img src="images/icons/fb.png" alt="">
+                       <img src="images/icons/twitter.png" alt="">
+                       <img src="images/icons/youtube.png" alt="">
+                  </div>
+           </div>
+  
+           <div class="right-side">
+                  <h3>Subscribe</h3>
+                  <input type="text" name="" id="" placeholder="Enter your email" >
+                  <input type="button" value="Subscribe">
+           </div>
+         </div>
     </footer>
 
 </body>
